# devkit-py

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  bootstrap.sh  pyproject.toml
.dependabot/: config.yaml
.github/workflows/: cache.yaml  check.yaml  ci.py.opensource.yaml  dependabot.yaml  main.yaml  release.yaml  version.yaml
coverage/: data
coverage/html/: index.html  src_outcome_devkit_test_helpers_py.html  status.json
src/outcome/devkit/: env_coverage.py
src/outcome/devkit/invoke/tasks/: release.py
src/outcome/flake8/: __init__.py
test/: conftest.py  test_env_coverage.py  test_pact.py  test_skips.py  test_test_db_state.py
test/fixtures/: test_without_modules.py
test/invoke/: test_docker.py  test_env.py
test/invoke/data/: running_containers.txt
test/tests/: test_env_coverage.py  test_without_modules.py
test/tests/invoke/: test_docker.py  test_env.py
test/tests/invoke/__snapshots__/: test_docker.ambr
test/tests/invoke/data/: stopped_containers.txt
typings/coverage/: __init__.pyi  config.pyi  plugin_support.pyi
