[tool.poetry]
name = "outcome-flake8-py"
version = "0.1.4"
description = "A wrapper package around commonly used flake8 extensions."
authors = ["Douglas Willcocks <douglas@outcome.co>"]
readme = "README.md"
license = "ISC"
packages = [
  { include = "outcome", from = "src" }
]
homepage = "https://github.com/outcome-co/flake8-py"
repository = "https://github.com/outcome-co/flake8-py"
documentation = "https://github.com/outcome-co/flake8-py#README"

[tool.poetry.dependencies]
python = "^3.7"
flake8-builtins = "^1.5.2"
flake8-commas = "^2.0.0"
flake8-debugger = "^3.2.1"
flake8-mutable = "^1.2.0"
flake8-print = "^3.1.4"
wemake-python-styleguide = "^0.14.0"
flake8-pytest = "^1.3"
flake8-breakpoint = "^1.1.0"
flake8-if-expr = "^1.0.0"
flake8-return = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.black]
line-length = 130
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.cache
)/
'''

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
