[tool.poetry]
name = "outcome-devkit-py"
version = "0.2.0"
description = "A package containing common dev dependencies for python projects."
authors = ["Douglas Willcocks <douglas@outcome.co>"]
readme = "README.md"
license = "ISC"
packages = [
  { include = "outcome", from = "src" }
]
homepage = "https://github.com/outcome-co/devkit-py"
repository = "https://github.com/outcome-co/devkit-py"
documentation = "https://github.com/outcome-co/devkit-py#README"

[tool.poetry.dependencies]
python = "^3.7"
flake8-builtins = "^1.5.2"
flake8-commas = "^2.0.0"
flake8-debugger = "^3.2.1"
flake8-mutable = "^1.2.0"
flake8-print = "^3.1.4"
wemake-python-styleguide = "^0.14.0"
flake8-pytest = "^1.3"
flake8-breakpoint = "^1.1.0"
flake8-if-expr = "^1.0.0"
flake8-return = "^1.1.1"
flake8-colors = "^0.1.6"
flake8 = "^3.7.9"
black = "^19.10b0"
coverage = "^5.0.3"
pytest = "^5.3.5"
pre-commit = "^2.2.0"
ipdb = "^0.13.2"
isort = "^4.3.21"

[tool.black]
line-length = 130
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.cache
)/
'''

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
